# huggingsound

./: git-update.sh  pyproject.toml
huggingsound/: trainer.py
huggingsound/speech_recognition/: decoder.py
