[tool.poetry]
name = "HuggingSound"
version = "0.2.0"
description = "HuggingSound: A toolkit for speech-related tasks based on HuggingFace's tools."
authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonatasgrosman/huggingsound"
repository = "https://github.com/jonatasgrosman/huggingsound"
documentation = "https://github.com/jonatasgrosman/huggingsound"
keywords = ["transformers", "audio", "speech", "automatic speech recognition", "asr", "voice recognition", "speech recognition", "speech-to-text"]

[tool.poetry.urls]
issues = "https://github.com/jonatasgrosman/huggingsound/issues"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.4.1+cu118", source = "pytorch-gpu-src"}
librosa = "^0.10.2.post1"
jiwer = "^3.0.4"
transformers = "^4.44.2"
datasets = "^3.0.0"
accelerate = "^0.34.2"
llvmlite = "^0.43.0"
pyctcdecode = "^0.5.0"
kenlm = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
coverage = {version = "^7.3.0", extras = ["toml"]}

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ['.']
omit = [
    "huggingsound/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
